# PDF-Writer-wasm

./: .gitignore  CMakeLists.txt  WASM-README.md  build-wasm.bat  build-wasm.sh
cmake/: Emscripten.cmake
examples/: wasm-example.js  wasm-test.html
wasm/: CMakeLists.txt  emscripten_fixes.h  pdfwriter_bindings.cpp
